// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

// TODO(#15208) rename package once we move to 3.0
package com.digitalasset.canton.protocol.v0;

import "google/protobuf/timestamp.proto";

/** Topology transaction collection used during bootstrapping of domain nodes and on the admin API
 *
 * Please note that this message should not be in the protocol package, as it is not used on the protocol
 * itself but on the admin apis. But as we can't rename the package name due to backwards compatibility
 * guarantees, we've moved the file out of the protocol.proto file, but kept the package name.
 */
message TopologyTransactions {
  message Item {
    google.protobuf.Timestamp sequenced = 4;
    google.protobuf.Timestamp valid_from = 1;
    google.protobuf.Timestamp valid_until = 2;
    /** Versioned signed topology transactions serialized as byte-strings. Note that we use here the serialized
       version that contains the version number. Using the "Versioned" version directly here would create a circular
       dependency between the proto files. The only proper solution would be to move this into a third separate file
       with "cross version data files", which we might do at some point. */
    bytes transaction = 3;
  }
  repeated Item items = 1;
}
